--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -405,9 +405,7 @@
     <Compile Include="WaveAggregatorBase.cs" />
     <Compile Include="WaveFormat.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CoreAudioAPI\Interop\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="SoundOut\DirectSound\dsound.h" />
     <Content Include="SoundOut\CoreAudio\WASAPI\Audioclient.h" />
