--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 ###################
 *.com
 *.class
-*.dll
+# *.dll #
 *.exe
 *.o
 *.so
@@ -42,7 +42,6 @@ AppPackages/
 TestResults/
 TestResult.xml
 MetricResults/
-Packages/
 *.user
 *.orig
 *.suo
