--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -217,6 +217,12 @@
     <Compile Include="Codecs\MP3\Mp3Frame.cs" />
     <Compile Include="Codecs\MP3\Mp3WebStream.cs" />
     <Compile Include="Codecs\MP3\XingHeader.cs" />
+    <Compile Include="CoreAudioAPI\AudioMeterInformation.cs" />
+    <Compile Include="MediaFoundation\MFInterops.cs" />
+    <Compile Include="MediaFoundation\NativeBool.cs" />
+    <Compile Include="Win32\ComStream.cs" />
+    <Compile Include="Win32\IStream.cs" />
+    <Compile Include="Win32\Win32ComException.cs" />
     <None Include="ClassDiagram1.cd" />
     <None Include="Codecs\VORBIS\Packet.cs" />
     <None Include="Codecs\VORBIS\IdentificationPacket.cs" />
@@ -247,15 +253,20 @@
     <Compile Include="DSP\ChannelMatrix.cs" />
     <Compile Include="DSP\DmoChannelResampler.cs" />
     <Compile Include="CoreAudioAPI\MMDevice.cs" />
-    <Compile Include="CoreAudioAPI\PropertyStore.cs" />
+    <Compile Include="Win32\PropertyStore.cs" />
+    <Compile Include="MediaFoundation\IMFByteStream.cs" />
     <Compile Include="MediaFoundation\InteropCalls.cs" />
     <Compile Include="MediaFoundation\MediaFoundationException.cs" />
+    <Compile Include="MediaFoundation\MediaTypeEqualFlags.cs" />
     <Compile Include="MediaFoundation\MFAttribute.cs" />
     <Compile Include="MediaFoundation\MFAttributeMatchType.cs" />
     <Compile Include="MediaFoundation\MFAttributes.cs" />
     <Compile Include="MediaFoundation\MFAttributeType.cs" />
+    <Compile Include="MediaFoundation\MFMediaBuffer.cs" />
     <Compile Include="MediaFoundation\MFMediaType.cs" />
+    <Compile Include="MediaFoundation\MFSample.cs" />
     <Compile Include="MediaFoundation\MFSourceReader.cs" />
+    <Compile Include="MediaFoundation\MFWaveFormatExConvertFlags.cs" />
     <Compile Include="SoundIn\WaveInEvent.cs" />
     <Compile Include="SoundIn\WaveInWindow.cs" />
     <Compile Include="SoundOut\DirectSoundOut.cs" />
@@ -291,9 +302,9 @@
     <Compile Include="Tags\ID3\ID3Genre.cs" />
     <Compile Include="Tags\ID3\ID3v1.cs" />
     <Compile Include="Tags\ID3\ID3v2QuickInfo.cs" />
-    <Compile Include="Utils\NativeBool.cs" />
+    <Compile Include="Win32\NativeBool.cs" />
     <Compile Include="Utils\FastFourierTransformation.cs" />
-    <Compile Include="Utils\HResult.cs" />
+    <Compile Include="Win32\HResult.cs" />
     <Compile Include="Utils\ReadBlockStream.cs" />
     <Compile Include="Utils\RemoveObjAttribute.cs" />
     <Compile Include="WaveFormatExtensible.cs" />
@@ -324,16 +335,16 @@
     <Compile Include="Codecs\MP3\Mp3Stream.cs" />
     <Compile Include="Context.cs" />
     <Compile Include="CoreAudioAPI\CoreAudioAPIException.cs" />
-    <Compile Include="CoreAudioAPI\Blob.cs" />
+    <Compile Include="Win32\Blob.cs" />
     <Compile Include="CoreAudioAPI\DataFlow.cs" />
     <Compile Include="CoreAudioAPI\DeviceState.cs" />
     <Compile Include="CoreAudioAPI\ExecutionContext.cs" />
     <Compile Include="CoreAudioAPI\IMMDevice.cs" />
     <Compile Include="CoreAudioAPI\IMMDeviceCollection.cs" />
     <Compile Include="CoreAudioAPI\IMMDeviceEnumerator.cs" />
-    <Compile Include="CoreAudioAPI\IPropertyStore.cs" />
-    <Compile Include="CoreAudioAPI\PropertyKey.cs" />
-    <Compile Include="CoreAudioAPI\PropertyVariant.cs" />
+    <Compile Include="Win32\IPropertyStore.cs" />
+    <Compile Include="Win32\PropertyKey.cs" />
+    <Compile Include="Win32\PropertyVariant.cs" />
     <Compile Include="CoreAudioAPI\Role.cs" />
     <Compile Include="CoreAudioAPI\StorageAccess.cs" />
     <Compile Include="CoreAudioAPI\MMDeviceEnumerator.cs" />
@@ -423,7 +434,7 @@
     <Compile Include="Tags\ID3\ID3v2TextEncodingRestriction.cs" />
     <Compile Include="Tags\ID3\UnsyncStream.cs" />
     <Compile Include="Utils\BitReader.cs" />
-    <Compile Include="Utils\ComObject.cs" />
+    <Compile Include="Win32\ComObject.cs" />
     <Compile Include="SoundOut\DirectSound\DirectSound.cs" />
     <Compile Include="SoundOut\DirectSound\DirectSound8.cs" />
     <Compile Include="SoundOut\DirectSound\DirectSoundBufferBase.cs" />
@@ -445,7 +456,7 @@
     <Compile Include="SoundOut\DirectSound\InteropCalls.cs" />
     <Compile Include="SoundOut\MmInterop\MMInterop.cs" />
     <Compile Include="Utils\FlacBitReader.cs" />
-    <Compile Include="Utils\IUnknown.cs" />
+    <Compile Include="Win32\IUnknown.cs" />
     <Compile Include="SoundOut\MmInterop\MmResult.cs" />
     <Compile Include="SoundOut\MmInterop\MMTime.cs" />
     <Compile Include="SoundOut\MmInterop\WaveHeader.cs" />
