Removed obsolete logging feature

--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -188,6 +188,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ACM\AcmException.cs" />
     <Compile Include="Codecs\CodecFactoryEntry.cs" />
     <Compile Include="Codecs\AAC\AACDecoder.cs" />
     <Compile Include="Codecs\DDP\DDPDecoder.cs" />
@@ -225,6 +226,7 @@
     <Compile Include="Codecs\WMA\WMADecoder.cs" />
     <Compile Include="CoreAudioAPI\AudioCaptureClient.cs" />
     <Compile Include="CoreAudioAPI\AudioMeterInformation.cs" />
+    <Compile Include="DSP\ChannelMatrixElement.cs" />
     <Compile Include="MediaFoundation\CommonAudioDecoder.cs" />
     <Compile Include="MediaFoundation\MediaFoundationAttributes.cs" />
     <Compile Include="MediaFoundation\MediaFoundationCore.cs" />
@@ -339,20 +341,19 @@
     <Compile Include="Codecs\WAV\WaveFileChunk.cs" />
     <Compile Include="Codecs\WAV\WaveFileReader.cs" />
     <Compile Include="Codecs\WAV\WaveWriter.cs" />
-    <Compile Include="Compression\ACM\AcmConverter.cs" />
-    <Compile Include="Compression\ACM\AcmResult.cs" />
-    <Compile Include="Compression\ACM\AcmBufferConverter.cs" />
-    <Compile Include="Compression\ACM\Interop\AcmConvertFlags.cs" />
-    <Compile Include="Compression\ACM\Interop\AcmFormatSuggestFlags.cs" />
-    <Compile Include="Compression\ACM\AcmHeader.cs" />
-    <Compile Include="Compression\ACM\Interop\NativeAcmHeader.cs" />
-    <Compile Include="Compression\ACM\Interop\AcmHeaderState.cs" />
-    <Compile Include="Compression\ACM\Interop\AcmInterop.cs" />
-    <Compile Include="Compression\ACM\Interop\AcmStreamOpenFlags.cs" />
-    <Compile Include="Compression\ACM\Interop\AcmStreamSizeFlags.cs" />
-    <Compile Include="Compression\ACM\Interop\AcmWaveFilter.cs" />
+    <Compile Include="ACM\AcmConverter.cs" />
+    <Compile Include="ACM\AcmResult.cs" />
+    <Compile Include="ACM\AcmBufferConverter.cs" />
+    <Compile Include="ACM\Interop\AcmConvertFlags.cs" />
+    <Compile Include="ACM\Interop\AcmFormatSuggestFlags.cs" />
+    <Compile Include="ACM\AcmHeader.cs" />
+    <Compile Include="ACM\Interop\NativeAcmHeader.cs" />
+    <Compile Include="ACM\Interop\AcmHeaderState.cs" />
+    <Compile Include="ACM\Interop\AcmInterop.cs" />
+    <Compile Include="ACM\Interop\AcmStreamOpenFlags.cs" />
+    <Compile Include="ACM\Interop\AcmStreamSizeFlags.cs" />
+    <Compile Include="ACM\Interop\AcmWaveFilter.cs" />
     <Compile Include="Codecs\MP3\Mp3Stream.cs" />
-    <Compile Include="Context.cs" />
     <Compile Include="CoreAudioAPI\CoreAudioAPIException.cs" />
     <Compile Include="Win32\Blob.cs" />
     <Compile Include="CoreAudioAPI\DataFlow.cs" />
@@ -499,18 +500,11 @@
     <Compile Include="Utils\CRC16.cs" />
     <Compile Include="Utils\CRC8.cs" />
     <Compile Include="Utils\CRCBase.cs" />
-    <Compile Include="Utils\CSCliAttribute.cs" />
+    <Compile Include="Utils\CSCalliAttribute.cs" />
     <Compile Include="Utils\CSMath.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="Utils\Logger\ConsoleLogger.cs" />
-    <Compile Include="Utils\Logger\DiagnosticLogger.cs" />
-    <Compile Include="Utils\Logger\FileLogger.cs" />
-    <Compile Include="Utils\Logger\LogDispatcher.cs" />
-    <Compile Include="Utils\Logger\LoggerBase.cs" />
-    <Compile Include="Utils\Logger\StreamLogger.cs" />
     <Compile Include="Utils\Memory.cs" />
     <Compile Include="Utils\UintOffsets.cs" />
-    <Compile Include="Utils\UnhandeldException.cs" />
     <Compile Include="Utils\Utils.cs" />
     <Compile Include="Utils\WaveFormatMarshaler.cs" />
     <Compile Include="WaveAggregatorBase.cs" />
